# vite-plugin-norg

./: .gitignore  .npmignore  .prettierignore  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.ts  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  rust-toolchain.toml  treefmt.toml  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
.github/actions/setup/: action.yml
.github/actions/setup-linux/: action.yml
.github/actions/setup-nix/: action.yml
.github/actions/setup-windows/: action.yml
.github/workflows/: pr.yml  publish.yml  release.yml  renovate.yml
examples/html/: configuration.html  embed-components.html  env.d.ts  getting-started.html  index.html  package.json  vite.config.ts
examples/html/content/: configuration.norg  embed-components.norg  getting-started.norg  index.norg
examples/html/src/: configuration.ts  embed-components.ts  getting-started.ts  layout.ts  main.ts
examples/react/: env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/react/content/: configuration.norg  embed-components.norg  getting-started.norg  index.norg
examples/react/src/: App.tsx  main.tsx
examples/svelte/: env.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
examples/svelte/content/: configuration.norg  embed-components.norg  getting-started.norg  index.norg
examples/svelte/src/: App.svelte  main.ts
examples/vue/: env.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
examples/vue/content/: configuration.norg  embed-components.norg  getting-started.norg  index.norg
examples/vue/src/: App.vue
site/: package.json  vite.config.ts
site/content/: index.norg
site/src/: app.d.ts  app.html
site/src/routes/: +layout.svelte  +page.svelte
src/parser/: ast_handlers.rs  error.rs  html.rs  lib.rs  metadata.rs  segments.rs  toc.rs  types.rs  utils.rs
src/parser/ast_handlers/: error.rs  helpers.rs  mod.rs  nestable.rs  verbatim.rs
src/plugin/: index.ts  napi.ts  parser.ts  plugin.ts  react.d.ts  wasm.ts
src/plugin/generators/: helpers.ts  html.d.ts  html.ts  index.ts  metadata.d.ts  metadata.ts  react.d.ts  react.ts  svelte.d.ts  svelte.ts  utils.ts  vue.d.ts  vue.ts
src/plugin/types/: html.d.ts  metadata.d.ts  svelte.d.ts
tests/: integration_end_to_end.rs  metadata_extraction_tests.rs  parser.rs  parser_tests.rs  setup.ts  utils_tests.rs  wasm_integration_tests.rs
tests/fixtures/: basic.norg  blocks.norg  code-blocks.norg  embed-css.norg  embed-react.norg  embed.norg  headings.norg  images.norg  inline-css.norg  inline-react.norg  inline.norg  links.norg  minimal.norg  nested-lists.norg
tests/fixtures/components/: Badge.svelte  Counter.jsx  Counter.svelte
tests/parser/: html_tests.rs  metadata_tests.rs  test_utils.rs  utils_tests.rs
tests/parser/snapshots/: parser_tests__parser__html_tests__convert_nodes.snap  parser_tests__parser__html_tests__tests__fixtures__basic.norg.snap  parser_tests__parser__html_tests__tests__fixtures__blocks.norg.snap  (+16 more)
tests/plugin/: embed.test.ts  fixtures.ts  html.test.ts  inline.test.ts  metadata.test.ts  plugin.test.ts  react.test.ts  svelte.test.ts  vue.test.ts
(+9 files in other folders)
