[package]
name = "vite-plugin-norg-parser"
version = "4.0.16"
edition = "2024"
authors = ["Drake Bott"]
description = "wasm parser for vite-plugin-norg"
license = "MIT"
repository = "https://github.com/bottd/vite-plugin-norg"
categories = ["norg", "neorg", "vite", "parser"]

[lib]
name = "vite_plugin_norg_parser"
crate-type = ["cdylib", "rlib"]
path = "src/parser/lib.rs"


[dependencies]
napi = { version = "=3.9.0", features = ["serde-json"] }
napi-derive = { version = "=3.5.6", features = ["type-def"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
htmlescape = "=0.3.1"
rust-norg = { git = "https://github.com/nvim-neorg/rust-norg", rev = "8e40d2443c39b4719e1c6637b93007fa64353e92" }
arborium = { version = "=2.18.0", features = ["all-languages"] }
textwrap = "=0.16.2"
itertools = "=0.14.0"

[dev-dependencies]
insta = { version = "=1.47.2", features = ["yaml"] }
proptest = "=1.11.0"
rstest = "=0.26.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
